--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,60 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:background="@color/colorAccent">
 
     <LinearLayout
-        android:id="@+id/banner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="8dp">
-
-
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            app:srcCompat="@drawable/logo1" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="16dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/banner"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginTop="8dp"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/title"
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:contentDescription="@string/slogan"
+                app:srcCompat="@drawable/logo1" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="@string/title"
-                android:textColor="#ffffff"
-                android:textSize="30dp"/>
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/slogan"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/slogan"
-                android:textColor="#ffffff"
-                android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/title"
+                    android:textColor="#ffffff"
+                    android:textSize="30sp" />
+
+                <TextView
+                    android:id="@+id/slogan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/slogan"
+                    android:textColor="#ffffff"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:id="@+id/buttons">
 
         <EditText
             android:id="@+id/email"
@@ -62,18 +59,20 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="@drawable/textbox"
+            android:layout_marginTop="20dp"
             android:hint="@string/email"
-            android:paddingHorizontal="10dp"
+            android:autofillHints="@string/email"
             android:inputType="textEmailAddress"
-            android:textAlignment="center"
-            android:singleLine="false" />
+            android:paddingHorizontal="10dp"
+            android:singleLine="false"
+            android:textAlignment="center" />
 
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_marginTop="20dp"
+            android:layout_weight="1"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown" />
 
@@ -81,8 +80,8 @@
             android:id="@+id/go"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_marginTop="20dp"
+            android:layout_weight="1"
             android:background="@drawable/button"
             android:text="@string/go" />
 
@@ -90,26 +89,26 @@
             android:id="@+id/stop"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_marginTop="20dp"
-            android:visibility="gone"
+            android:layout_weight="1"
             android:background="@drawable/button"
-            android:text="@string/stop" />
+            android:text="@string/stop"
+            android:visibility="gone" />
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_marginTop="20dp"
+            style="@style/GenericProgressIndicator"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight=".5"
-            style="@style/GenericProgressIndicator"/>
+            android:layout_marginTop="20dp"
+            android:layout_weight=".5" />
 
         <TextView
             android:id="@+id/message"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight=".5"
             android:layout_marginTop="20dp"
+            android:layout_weight=".5"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="15sp" />
@@ -120,19 +119,22 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:background="@drawable/textbox"
-            android:paddingHorizontal="10dp"
+            android:hint="@string/edtiLink"
+            android:autofillHints="@string/edtiLink"
             android:inputType="textEmailAddress"
-            android:textAlignment="center"
-            android:singleLine="false" />
+            android:paddingHorizontal="10dp"
+            android:singleLine="false"
+            android:textAlignment="center" />
 
-        <com.example.khoah.automatechill.MultiSpinner android:id="@+id/multi_spinner"
+        <com.example.khoah.automatechill.MultiSpinner
+            android:id="@+id/multi_spinner"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
             android:layout_marginTop="20dp"
+            android:layout_weight="1"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown" />
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
